# fastapi-dope-2026-template

./: README.md  main.py  pyproject.toml
app/config/: database.py
